--- a/templates/index.html
+++ b/templates/index.html
@@ -42,9 +42,9 @@
             <button onclick="loadExample()">Ejemplo</button>
             <button onclick="exportResult()">Exportar resultado</button>
         </div>
-        <footer>
+        <!-- <footer>
             <p>By Luis Acosta & Santiago Rincon</p>
-        </footer>
+        </footer> -->
     </div>
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
